--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     </div>
     <div class="dices">
         <div class="d1">
-            <img class="di1" src="images/dice2.png" alt="dice images">
+            <img class="di1" src="dice2.png" alt="dice images">
         </div>
         <p class="p1">Player 1</p>
         <div class="d2">
-            <img class="di2" src="images/dice1.png" alt="dice images">
+            <img class="di2" src="dice1.png" alt="dice images">
 
         </div>
         <p class="p2">Player 2</p>
